--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -6,6 +6,8 @@
   color: gray;
   /* background-color: red; */
   box-shadow: rgba(0, 0, 0, 0.55) 0px -10px 10px -10px;
+  padding: 0 100px;
+
 
 }
 
