--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   /* background-color: red; */
   box-shadow: rgba(0, 0, 0, 0.55) 0px 10px 10px -10px;
+  padding: 0 100px;
 
 }
 
