--- a/src/app/profile/profile.module.css
+++ b/src/app/profile/profile.module.css
@@ -7,6 +7,8 @@
 
 .row {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 100px;
 }
 
@@ -15,8 +17,9 @@
   font-weight: 300;
 }
 
-.col {
+.form {
   flex: 1;
+  width: 40%;
 }
 
 .col  img {
