--- a/src/components/userPosts/userPosts.module.css
+++ b/src/components/userPosts/userPosts.module.css
@@ -1,22 +1,37 @@
-.post {
-  margin: 20px 0px;
+.container{
+  width: 100%;
+  min-height: 100vh;
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  gap: 20px;
+  padding: 50px 8%;
 }
 
-.detail {
-  display: flex;
-  align-items: center;
-  gap: 20px;
+.images{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  grid-gap: 30px;
 }
 
-.postButton{
-  padding: 5px 10px;
-  background-color: rgba(220, 20, 60, 0.593);
-  color: var(--textColor);
-  border-radius: 5px;
-  border: none;
+.images img{
+  width: 100%;
+  cursor: pointer;
+}
+.lighthouse{
+  position: fixed;
+  min-height: 100vh;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  background:  linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.lighthouse img{
+  width:30%;
+  min-height: 30%;
   cursor: pointer;
 }
