--- a/src/app/feed/feed.module.css
+++ b/src/app/feed/feed.module.css
@@ -1,24 +1,20 @@
 .container {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  gap: 20px;
-  width: 100%;
-}
+  width: 70%;
+  gap: 100px;
+  
+  max-width: 1000px; 
+  margin: 0 auto; 
 
+}
 .post {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
   gap: 50px;
 }
 
-.row {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 100px;
-}
 
 @media screen and (max-width: 1280px) {
 
