--- a/src/components/userPostForm/userPostForm.module.css
+++ b/src/components/userPostForm/userPostForm.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -22,4 +22,109 @@
   border-radius: 5px;
   color: var(--textColor);
   font-weight: bold;
+} */
+
+
+.form_container {
+  width: 100%;
+  background: linear-gradient(#212121, #212121) padding-box,
+              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  border: 2px solid transparent;
+  padding: 16px 12px;
+  font-size: 14px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  border-radius: 16px;
 }
+
+.form_container button:active {
+  scale: 0.95;
+}
+
+.form_container .form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.form_container .form_group {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.form_container .form_group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #717171;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.form_container .form_group input {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  color: #fff;
+  font-family: inherit;
+  background-color: transparent;
+  border: 1px solid #414141;
+}
+
+.form_container .form_group textarea {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  resize: none;
+  color: #fff;
+  height: 96px;
+  border: 1px solid #414141;
+  background-color: transparent;
+  font-family: inherit;
+}
+
+.form_container .form_group input::placeholder {
+  opacity: 0.5;
+}
+
+.form_container .form_group input:focus {
+  outline: none;
+  border-color: #e81cff;
+}
+
+.form_container .form_group textarea:focus {
+  outline: none;
+  border-color: #e81cff;
+}
+
+.form_container .form_submit_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  font-family: inherit;
+  color: #717171;
+  font-weight: 600;
+  width: 40%;
+  background: #313131;
+  border: 1px solid #414141;
+  padding: 12px 16px;
+  font-size: inherit;
+  gap: 8px;
+  margin-top: 8px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.form_container .form_submit_btn:hover {
+  background-color: #fff;
+  border-color: #fff;
+}
+
+
+
+
