--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -14,34 +14,87 @@
   object-fit: contain;
 }
 
-.formContainer {
-  flex: 1;
+.form_container {
+  width: 50%;
+  background: linear-gradient(#212121, #212121) padding-box,
+              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  border: 2px solid transparent;
+  padding: 16px 12px;
+  font-size: 14px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  /* box-sizing: border-box; */
+  border-radius: 16px;
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
 }
 
-.form input,
-.form textarea {
-  padding: 20px;
-  border-radius: 5px;
-  border: none;
+.form_container .form_group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #717171;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.form_container .form_group input {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  color: #fff;
+  font-family: inherit;
+  background-color: transparent;
+  border: 1px solid #414141;
+}
+
+.form_container .form_group textarea {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  resize: none;
+  color: #fff;
+  height: 96px;
+  border: 1px solid #414141;
+  background-color: transparent;
+  font-family: inherit;
+}
+
+.form_container .form_group input::placeholder {
+  color: #6c6b6b;
+}
+.form_container .form_group textarea::placeholder {
+  color: #6c6b6b;
+}
+
+.form_container .form_group input:focus {
   outline: none;
-  background-color: var(--bgSoft);
-  color: var(--text);
+  border-color: #e81cff;
+}
+
+.form_container .form_group textarea:focus {
+  outline: none;
+  border-color: #e81cff;
 }
 
 .buttonEnabled {
   padding: 20px;
-  background-color: var(--btn);
-  color: var(--text);
+  background-color: white;
+  color: black;
   font-weight: bold;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+.buttonEnabled:hover{
+  background-color: #414141;
+  color: white;
 }
 
 .buttonDisabled{
