--- a/src/app/feed/feed.module.css
+++ b/src/app/feed/feed.module.css
@@ -9,10 +9,10 @@
 
 }
 .post {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   width: 100%;
-  gap: 50px;
+  gap: 50px; */
 }
 
 
