--- a/src/app/profile/profile.module.css
+++ b/src/app/profile/profile.module.css
@@ -1,23 +1,13 @@
 .container {
-  margin-top: 50px;
   display: flex;
   flex-direction: column;
+  width: 70%;
   gap: 100px;
-  background-color: red;
-  min-width: 1000px;
+  
+  max-width: 1000px; 
+  margin: 0 auto; 
 }
 
-.row {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 100px;
-}
-
-.line{
-  /* margin: 100px;
-  color: var(--bgSoft) */
-}
 
 @media (max-width: 768px) {
 }
