--- a/src/app/countryselector/countryselector.module.css
+++ b/src/app/countryselector/countryselector.module.css
@@ -1,13 +1,16 @@
 
+.input{
+  color: rgb(223, 0, 0);
+}
 .ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     max-height: 150px;
     overflow-y: auto;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 4px;
-    background-color: #fff;
+    background-color: #000000;
     position: absolute;
     width: calc(100% - 22px); /* Adjust according to input padding and border */
     z-index: 1;
@@ -19,6 +22,6 @@
   }
   
   .li:hover {
-    background-color: #f0f0f0;
+    background-color: #bd0000;
   }
   
