--- a/src/components/userPostForm.module.css
+++ b/src/components/userPostForm.module.css
@@ -26,7 +26,7 @@
 
 
 .form_container {
-  width: 100%;
+  width: 60%;
   background: linear-gradient(#212121, #212121) padding-box,
               linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
   border: 2px solid transparent;
@@ -107,11 +107,10 @@
   justify-content: center;
   align-self: center;
   font-family: inherit;
-  color: #717171;
+  color: #000000;
   font-weight: 600;
   width: 40%;
-  background: #313131;
-  border: 1px solid #414141;
+  border: 1px solid #503abf;
   padding: 12px 16px;
   font-size: inherit;
   gap: 8px;
@@ -121,10 +120,15 @@
 }
 
 .form_container .form_submit_btn:hover {
-  background-color: #fff;
-  border-color: #fff;
+  border-color: #503abf;
+  color:black;
 }
-
-
+.group_btn{
+  display: flex;
+  align-items: center;
+  padding-top: 25px;
+  justify-content: space-around;
+  
+}
 
 
