--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -3,9 +3,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: gray;
+  color: rgb(255, 255, 255);
   /* background-color: red; */
-  box-shadow: rgba(0, 0, 0, 0.55) 0px -10px 10px -10px;
+  box-shadow: rgba(0, 0, 0, 0.95) 0px -10px 10px -10px;
   padding: 0 100px;
 
 
