--- a/src/app/feed/[postid]/singlePost.module.css
+++ b/src/app/feed/[postid]/singlePost.module.css
@@ -3,7 +3,9 @@
   gap: 100px;
   /* flex-direction: column; */
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1.5fr;
+  align-items: center;
+  margin-bottom: 50px;
 }
 
 .imgContainer {
@@ -20,11 +22,11 @@
   flex: 2;
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  gap: 10px;
 }
 
 .title{
-  font-size: 64px;
+  font-size: 44px;
 }
 
 .detail{
@@ -48,7 +50,7 @@
 }
 
 .content{
-  font-size: 20px;
+  font-size: 18px;
 }
 
 @media (max-width:768px){
