--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -2,13 +2,17 @@
   display: flex;
   flex-direction: column;
   gap: 100px;
+  color: white;
 }
-  
+
 .hero{
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 100px;
+  z-index: 1;
 }
+
+
 
 .textContainer {
   display: flex;
@@ -53,29 +57,7 @@
 .img {
   width: 100%;
   height: 100%;
-  background-image: url("/hero1.gif");
+  background-image: url("/hero.gif");
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-@media (max-width: 1024px) {
-  .container {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .buttons{
-    justify-content: center;
-  }
-}
-
-@media (max-width: 768px) {
-  .title {
-    font-size: 64px;
-  }
-
-  .brands{
-    width: 100%;
-  }
-}
-
