--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,15 +1,3 @@
-.container{
-  width: 100%;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  /* background-color: red; */
-  box-shadow: rgba(0, 0, 0, 0.55) 0px 10px 10px -10px;
-  padding: 0 100px;
-
-}
-
 .logo{
   display: flex;
   align-items: center;
@@ -20,7 +8,7 @@
 }
 .logo_text{
   font-size: 2em;
-  color: gray;
+  color: white;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
 }
