Changes Made By Moin

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ body {
   position: fixed;
   left: 0px;
   top: 0px;
-  background-image: url("/bg.webp");
+  background-image: url("/bg-2.jpg");
   width: 100%;
   min-height: 100vh;
   background-size: cover;
