--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,24 @@ a {
   filter: blur(4px); 
   z-index: 1; 
 }
+.profile-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 30vh; 
+  background-image: url("https://images.unsplash.com/photo-1605379399642-870262d3d051?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80"); 
+  background-size: cover;
+  background-position: center;
+  /* z-index: -11;  */
+}
+.profile-cover::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(to top, transparent, rgba(0, 0, 0, 0.8));
+  pointer-events: none;
+}
 
 .content-container {
   margin: 25px 150px;
